chore: bump packages to premajor (#4942)
and make packages not yet to be published private

Co-authored-by: Bruno Henriques <zettca@users.noreply.github.com>

--- a/packages/app-shell-navigation/package.json
+++ b/packages/app-shell-navigation/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hitachivantara/app-shell-navigation",
-  "version": "1.4.17",
+  "version": "2.0.0-next.0",
   "type": "module",
   "private": false,
   "author": "Hitachi Vantara UI Kit Team",
@@ -23,7 +23,7 @@
     "prepublishOnly": "npm run build && npx clean-publish"
   },
   "dependencies": {
-    "@hitachivantara/app-shell-shared": "^1.7.7",
+    "@hitachivantara/app-shell-shared": "^2.0.0-next.0",
     "path-to-regexp": "^8.1.0"
   },
   "peerDependencies": {
