--- a/packages/app-shell-shared/package.json
+++ b/packages/app-shell-shared/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hitachivantara/app-shell-shared",
-  "version": "1.7.7",
+  "version": "2.0.0-next.0",
   "type": "module",
   "private": false,
   "author": "Hitachi Vantara UI Kit Team",
@@ -29,7 +29,7 @@
     "react-router-dom": "^6.9.0"
   },
   "optionalDependencies": {
-    "@hitachivantara/uikit-react-core": "^5.106.2"
+    "@hitachivantara/uikit-react-core": "^6.0.0-next.0"
   },
   "files": [
     "dist"
