--- a/packages/app-shell-services/package.json
+++ b/packages/app-shell-services/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hitachivantara/app-shell-services",
-  "version": "1.1.2",
+  "version": "2.0.0-next.0",
   "type": "module",
   "private": false,
   "author": "Hitachi Vantara UI Kit Team",
