--- a/packages/app-shell-ui/package.json
+++ b/packages/app-shell-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hitachivantara/app-shell-ui",
-  "version": "1.13.7",
+  "version": "2.0.0-next.0",
   "type": "module",
   "private": false,
   "author": "Hitachi Vantara UI Kit Team",
@@ -26,12 +26,12 @@
     "@emotion/css": "^11.10.5",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@hitachivantara/app-shell-events": "^1.1.2",
-    "@hitachivantara/app-shell-navigation": "^1.4.17",
-    "@hitachivantara/app-shell-services": "^1.1.2",
-    "@hitachivantara/app-shell-shared": "^1.7.7",
-    "@hitachivantara/uikit-react-core": "^5.106.2",
-    "@hitachivantara/uikit-react-icons": "^5.16.7",
+    "@hitachivantara/app-shell-events": "^2.0.0-next.0",
+    "@hitachivantara/app-shell-navigation": "^2.0.0-next.0",
+    "@hitachivantara/app-shell-services": "^2.0.0-next.0",
+    "@hitachivantara/app-shell-shared": "^2.0.0-next.0",
+    "@hitachivantara/uikit-react-core": "^6.0.0-next.0",
+    "@hitachivantara/uikit-react-icons": "^6.0.0-next.0",
     "@mui/material": "^7.0.2",
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.3",
