--- a/packages/app-shell-vite-plugin/package.json
+++ b/packages/app-shell-vite-plugin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hitachivantara/app-shell-vite-plugin",
-  "version": "1.10.2",
+  "version": "2.0.0-next.0",
   "type": "module",
   "private": false,
   "author": "Hitachi Vantara UI Kit Team",
@@ -26,11 +26,11 @@
   "dependencies": {
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.1",
-    "@hitachivantara/app-shell-services": "^1.1.2",
-    "@hitachivantara/app-shell-shared": "^1.7.7",
-    "@hitachivantara/app-shell-ui": "^1.13.7",
-    "@hitachivantara/uikit-react-icons": "^5.16.7",
-    "@hitachivantara/uikit-react-shared": "^5.5.7",
+    "@hitachivantara/app-shell-services": "^2.0.0-next.0",
+    "@hitachivantara/app-shell-shared": "^2.0.0-next.0",
+    "@hitachivantara/app-shell-ui": "^2.0.0-next.0",
+    "@hitachivantara/uikit-react-icons": "^6.0.0-next.0",
+    "@hitachivantara/uikit-react-shared": "^6.0.0-next.0",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
