--- a/packages/pentaho/package.json
+++ b/packages/pentaho/package.json
@@ -2,7 +2,7 @@
   "name": "@hitachivantara/uikit-react-pentaho",
   "version": "0.10.15",
   "type": "module",
-  "private": false,
+  "private": true,
   "author": "Hitachi Vantara UI Kit Team",
   "description": "UI Kit Pentaho React components.",
   "homepage": "https://github.com/lumada-design/hv-uikit-react",
@@ -39,9 +39,9 @@
   },
   "dependencies": {
     "@emotion/css": "^11.11.0",
-    "@hitachivantara/uikit-react-core": "^5.106.1",
-    "@hitachivantara/uikit-react-icons": "^5.16.6",
-    "@hitachivantara/uikit-react-utils": "^0.2.46",
+    "@hitachivantara/uikit-react-core": "^6.0.0-next.0",
+    "@hitachivantara/uikit-react-icons": "^6.0.0-next.0",
+    "@hitachivantara/uikit-react-utils": "^6.0.0-next.0",
     "@mui/base": "5.0.0-beta.68",
     "react-resize-detector": "^8.1.0"
   },
