--- a/packages/viz/package.json
+++ b/packages/viz/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hitachivantara/uikit-react-viz",
-  "version": "5.16.7",
+  "version": "6.0.0-next.0",
   "type": "module",
   "private": false,
   "author": "Hitachi Vantara UI Kit Team",
@@ -42,8 +42,8 @@
     "react-dom": ">=18.0.0"
   },
   "dependencies": {
-    "@hitachivantara/uikit-react-utils": "^0.2.46",
-    "@hitachivantara/uikit-styles": "^5.51.1"
+    "@hitachivantara/uikit-react-utils": "^6.0.0-next.0",
+    "@hitachivantara/uikit-styles": "^6.0.0-next.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
