chore(colors): move dsColors outside base definition

--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -25,6 +25,7 @@
   },
   "scripts": {
     "build": "npm run clean && vite build",
+    "test": "vitest",
     "clean": "npx rimraf dist package",
     "prepublishOnly": "npm run build && npx clean-publish"
   },
