--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -23,6 +23,7 @@
     "react-docgen-typescript": "^2.2.2",
     "react-dom": "^18.3.1",
     "react-element-to-jsx-string": "^15.0.0",
+    "react-grid-layout": "^1.5.2",
     "react-live-runner": "^1.0.7",
     "react-markdown": "^9.0.3",
     "usehooks-ts": "^2.9.1"
