fix: migrate cli baselines & bump pentaho/uno packages

--- a/packages/pentaho/package.json
+++ b/packages/pentaho/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@hitachivantara/uikit-react-pentaho",
-  "version": "0.10.16",
+  "version": "6.0.0-next.0",
   "type": "module",
-  "private": true,
+  "private": false,
   "author": "Hitachi Vantara UI Kit Team",
   "description": "UI Kit Pentaho React components.",
   "homepage": "https://github.com/lumada-design/hv-uikit-react",
