--- a/packages/uno-preset/package.json
+++ b/packages/uno-preset/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@hitachivantara/uikit-uno-preset",
-  "version": "0.2.72",
+  "version": "1.0.0-next.0",
   "type": "module",
-  "private": true,
+  "private": false,
   "author": "Hitachi Vantara UI Kit Team",
   "description": "UI Kit UnoCSS preset with the NEXT theme.",
   "homepage": "https://github.com/lumada-design/hv-uikit-react",
