--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hitachivantara/hv-uikit-cli",
+  "name": "@hitachivantara/uikit-cli",
   "version": "6.0.0-next.0",
   "private": false,
   "type": "module",
@@ -9,11 +9,11 @@
   "license": "Apache-2.0",
   "main": "src/index.js",
   "bin": {
-    "hv-uikit-cli": "src/index.js"
+    "uikit-cli": "src/index.js"
   },
   "keywords": [
     "hitachivantara",
-    "hv-uikit-cli",
+    "uikit-cli",
     "cli"
   ],
   "repository": {
