feat(AppShell): add client condition configuration [PPUC-34]

--- a/packages/app-shell-shared/package.json
+++ b/packages/app-shell-shared/package.json
@@ -8,6 +8,7 @@
   "homepage": "https://github.com/pentaho/hv-uikit-react",
   "sideEffects": false,
   "license": "Apache-2.0",
+  "main": "src/index.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/pentaho/hv-uikit-react.git",
